# sphinxcontrib-pseudocode

./: .buildinfo  .gitignore  CHANGELOG.md  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  demo.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build-demo.yml  publish.yml  python.yml
_sources/: demo.rst.txt
_static/: katex_autorenderer_demo.js  katex_autorenderer_index.js  pseudocode_autorenderer_index.js
docs/: Makefile  buildsite.sh  conf.py  demo.rst  index.rst  pyproject.toml
docs/plans/: 2026-03-07-newcommand-support-design.md  2026-03-07-newcommand-support.md  2026-03-07-parser-quirk-investigation.md  2026-03-07-uv-migration-design.md  2026-03-07-uv-migration.md
sphinxcontrib/: exceptions.py  mermaid.py  pseudocode.py
tests/: conftest.py  test_html.py
tests/roots/test-basic/: conf.py  index.rst
tests/roots/test-newcommand/: conf.py  index.rst
